force-app/main/default/objects/NBA_Rule_Set_Configuration__c/NBA_Rule_Set_Configuration__c.object-meta.xml
<CustomObject>
    <description>Used for Next Best Action. Serves as the parent record which will have NBA Rule Set child records.</description>
    <label>NBA Rule Set Configuration</label>
    <nameField>
        <label>NBA Rule Set Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NBA Rule Set Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>