force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to identity each rule set configuration by team abbreviation. The value is suffixed to the Served Up Rule and Served Other Rules field on Lead and Opportunity when records get served to the user. The format is &quot;Rule Name&quot; (from NBA Rule Set) &amp; &quot; - &quot; &amp; &quot;Abbreviation&quot;. This value is passed to the Task fields when the Task is created for logging a call.</description>
    <inlineHelpText>Used to identity each rule set configuration by team abbreviation. The value is suffixed to the Served Up Rule and Served Other Rules field on Lead and Opportunity when records get served to the user. The format is &quot;Rule Name&quot; (from NBA Rule Set) &amp; &quot; - &quot; &amp; &quot;Abbreviation&quot;. This value is passed to the Task fields when the Task is created for logging a call.</inlineHelpText>
    <label>Team Abbreviation</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>