force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/Available_Refreshes_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Available_Refreshes_Per_Day__c</fullName>
    <label>Available Refreshes Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>