force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/Last_Refresh_All_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_All_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Refresh All Date</label>
    <type>DateTime</type>
</CustomField>