force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/Refreshes_Triggered_Today__c.field-meta.xml
<CustomField>
    <fullName>Refreshes_Triggered_Today__c</fullName>
    <label>Refreshes Triggered Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>