force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/Rules_per_Execution__c.field-meta.xml
<CustomField>
    <fullName>Rules_per_Execution__c</fullName>
    <description>Specify a number of rules per chunk when serving a record to avoid backend limit issues, blank if there is no need for batching the execution.</description>
    <inlineHelpText>Specify a number of rules per chunk when serving a record to avoid backend limit issues, blank if there is no need for batching the execution.</inlineHelpText>
    <label>Rules per Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>