force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/Team_Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Team_Skill_Type__c</fullName>
    <description>Field is used to designate the Skill Type used in configuring standard Omni Channel Service Resources and User Skills. In NBA, this field filters the User Skills that can be selected for each Rule within this Ruleset Configuration.</description>
    <inlineHelpText>Field is used to designate the Skill Type used in configuring standard Omni Channel Service Resources and User Skills. In NBA, this field filters the User Skills that can be selected for each Rule within this Ruleset Configuration.</inlineHelpText>
    <label>Skill Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Benefits Fulfillment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>