force-app/main/default/objects/NBA_Rule_Set_Configuration__c/fields/User_Roles__c.field-meta.xml
<CustomField>
    <fullName>User_Roles__c</fullName>
    <description>List of user roles that are mapped to each rule set configuration. One user role will be linked to only configuration record.</description>
    <label>User Roles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>