force-app/main/default/objects/NBA_Rule_Set_Configuration__c/validationRules/Rules_per_execution_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Rules_per_execution_greater_than_0</fullName>
    <active>true</active>
    <description>Please ensure Rules per Execution is between 1 and 50.</description>
    <errorConditionFormula>Rules_per_Execution__c &lt;= 0 || Rules_per_Execution__c &gt; 50</errorConditionFormula>
    <errorMessage>Please ensure Rules per Execution is between 1 and 50.</errorMessage>
</ValidationRule>